--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Biografía de Tim Berners Lee</h1>
-    <img src="fotoTim.jpggit" alt="">
+    <img src="./imagenes-usadas/fotoTim.jpg" alt="Foto Tim Berners Lee" width="10%" height="5%">
 
     <p><b>Berners-Lee</b>trabajó en el CERN desde junio hasta diciembre de 1980. Durante ese tiempo, propuso un proyecto
         basado en el hipertexto
